--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
   <!-- Link to CSS file-->
   <link rel="css stylesheet" href='./css/styles.css'>
 
-  <!-- Bootstrap Script -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
   <!-- FontAwesome Script -->
   <script src="https://kit.fontawesome.com/ba09da393d.js" crossorigin="anonymous"></script>
+
 
   <title>Group 8</title>
 </head>
@@ -28,21 +26,8 @@
     <div class="container-fluid">
       <h1>Task Manager</h1>
 
-      <!-- Search Bar -->
-      <div class="container">
-        <div class="row">
-          <div class="col-auto">
-            <div class="input-group mb-3" style="width: 18rem; flex-wrap: 0;">
-              <input type="text" id="search" class="form-control" placeholder="Search.." aria-describedby="searchbox">
-              <button class="btn btn-outline-primary" type="button" id="button-addon2"><i class="fa fa-search"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
       <!-- Page 1 Tasks Section -->
-
+<!--
       <div class="container">
         <div class="row">
           <div class="col">
@@ -68,123 +53,115 @@
               <div class="card-header"><i class="fa-solid fa-inbox"></i>All Tasks</div>
               <div class="card-body">
                 <a href="#" class="card-link">Swiffer floors</a>
-                <div class="dropdown">
-                  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                    Status
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">To-do</a></li>
-                    <li><a class="dropdown-item" href="#">In Progress</a></li>
-                    <li><a class="dropdown-item" href="#">Review</a></li>
-                    <li><a class="dropdown-item" href="#">Done</a></li>
-                  </ul>
-                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <!-- Page 2 Task Selector -->
+      <!-- Task Selectors -->
 
       <section id="tasks">
 
         <h1>Add New Task</h1>
 
-        <div class="container">
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Task Name" aria-label="Text input with dropdown button">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Choose</button>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="#">Chores</a></li>
-              <li><a class="dropdown-item" href="#">Errands</a></li>
-              <li><a class="dropdown-item" href="#">Childcare</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Other</a></li>
-            </ul>
+        <!-- Task Name -->
+        <form>
+          <div class="row">
+            <div class="col-4">
+              <label for="validationCustom01" class="form-label"><strong>Task Name</strong></label>
+              <select class="form-select" id="validationCustom01" required>
+                <option selected disabled value="">Select</option>
+                <option value="dishes">Wash Dishes</option>
+                <option value="groceries">Pick up groceries</option>
+                <option value="garage">Clean garage</option>
+                <option value="swiffer">Swiffer floors</option>
+                <option value="pick up">Pick kids up from day care</option>
+              </select>
+            </div>
+
+
+            <!-- Task Description -->
+
+            <div class="col-4">
+
+              <label for="validationCustom02" class="form-label"><strong>Task Description</strong></label>
+              <select class="form-select" id="validationCustom02" required>
+                <option selected disabled value="">Select</option>
+                <option value="chores">Chores</option>
+                <option value="errands">Errands</option>
+                <option value="childcare">Childcare</option>
+              </select>
+            </div>
+
+            <!-- Assigned To -->
+            <div class="col-4">
+              <label for="validationCustom03" class="form-label"><strong>Assigned To</strong></label>
+              <select class="form-select" id="validationCustom03" required>
+                <option selected disabled value="">Select</option>
+                <option value="Jaida">Jaida</option>
+                <option value="Safiya">Safiya</option>
+                <option value="Hareg">Hareg</option>
+                <option value="Hanna">Hanna</option>
+              </select>
+            </div>
           </div>
 
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Task Description" aria-label="Text input with dropdown button">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Choose</button>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="#">Wash Dishes</a></li>
-              <li><a class="dropdown-item" href="#">Pick up groceries</a></li>
-              <li><a class="dropdown-item" href="#">Clean garage</a></li>
-              <li><a class="dropdown-item" href="#">Swiffer floors</a></li>
-              <li><a class="dropdown-item" href="#">Pick kids up from day care</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Other</a></li>
-            </ul>
+          <!-- Due Date -->
+          <div class="row">
+            <div class="col-6">
+              <label for="duedate" class="form-label"><strong>Due Date</strong></label>
+              <input type="date" class="form-control" id="duedate" name="duedate">
+            </div>
           </div>
 
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Assigned To" aria-label="Text input with dropdown button">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Choose</button>
-            <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="#">Safiya</a></li>
-              <li><a class="dropdown-item" href="#">Jaida</a></li>
-              <li><a class="dropdown-item" href="#">Hareg</a></li>
-              <li><a class="dropdown-item" href="#">Hanna</a></li>
-              <li><a class="dropdown-item" href="#">ChiChi</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Other</a></li>
-            </ul>
+          <!-- Status -->
+          <div class="row">
+            <div class="col-6">
+              <label for="validationCustom04" class="form-label"><strong>Status</strong></label>
+              <select class="form-select" id="validationCustom04" required>
+                <option selected disabled value="">Select</option>
+                <option value="todo">To-Do</option>
+                <option value="inprogress">In Progress</option>
+                <option value="inreview">In Review</option>
+                <option value="done">Done</option>
+              </select>
+            </div>
           </div>
-          <p><strong>Due Date</strong></p>
-          <div class="input-group mb-3">
-            <input type="date" class="form-control" id="duedate" name="duedate">
-          </div>
-          <button type="button" class="btn btn-outline-success btn-lg" style="padding-left: 25px"><i class="fa-solid fa-plus"></i></button>
+          <!-- Submit Button -->
+          <input type="submit" id="submit-btn" type="button" class="btn btn-outline-success btn-lg" style="padding-left: 25px"><i class="fa-solid fa-plus"></i></input>
+    </div>
+    </form>
+
+  </section>
 
 
-        </div>
+  <!-- Task Confirmation-->
+  <section id="confirmation">
+    <div id="task-confirmation" class="alert alert-success" role="alert">
+      <h4 class="alert-heading">Task Created!</h4>
+  <hr>
+  <ul>
+    <li><strong>Task Name:</strong></li>
+    <li><strong>Task Description:</strong></li>
+    <li><strong>Assigned To:</strong></li>
+    <li><strong>Due Date:</strong></li>
+    <li><strong>Status:</strong></li>
+  </ul>
 
-
-<!-- Page 3-->
- <ul 
- <div class="card w-25">
-  <div class="card-header card text-black bg-secondary mb-3">
-   Confirmation
-  </div>
-  <div class="card w-25"></div>
-  <div class="card-body">
-<h6 class="card-subtitle mb-2 text-muted">Task Name</h6>
-    	<h6 class="card-subtitle mb-2 text-muted">Task description</h6>
-   	<h6 class="card-subtitle mb-2 text-muted">Task assigned to</h6>
- 	<h6 class="card-subtitle mb-2 text-muted">Task due date</h6>
-    <a href="#" class="card-link">Go back</a>
-   
+        <a href="#" class="card-link">Close</a>
+    </div>
   </div>
 </div>
-
-<div class="card w-25">
-  <div class="card-header card text-black bg-secondary mb-3">
-   Confirmation
-  </div>
-  <div class="card w-25"></div>
-  <div class="card-body">
-<ul class="list-group">
-  <li class="list-group-item">Task Name</li>
-  <li class="list-group-item">Task description</li>
-  <li class="list-group-item">Task assigned to</li>
-  <li class="list-group-item">Task due date</li>
-</ul>
-<a href="#" class="card-link">Go back</a>
-</div>
-</div>
+  </section>
 
 
+<!-- JavaScript -->
+  <script src="resources/index.js"></script>
+  <!-- Bootstrap Script -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 
-
-
-
+</body>
 
 </html>
-
