--- a/index.html
+++ b/index.html
@@ -92,13 +92,29 @@
               </select>
             </div>
             <div class="col-md-12">
-              <button type="submit" class="btn btn-primary">Add</button>
+              <button id="button" type="submit" class="btn btn-primary">Add</button>
             </div>
           </form>
             </div>
         </section>
 
+<!-- Task Card -->
+<section id="taskCard">
+  <div id="newTaskList" class="container-mt-5">
+    <li class="list-group-item">
+        <div class="d-flex w-100 mt-2 justify-content-between align-items-center">
+            <h5>Take out trash</h5>
+            <span class="badge badge-danger">TODO</span>
+        </div>
+        <div class="d-flex w-100 mb-3 justify-content-between">
+            <small>Assigned To: Nick</small>
+            <small>Due: 20/09/2020</small>
+        </div>
+        <p>Take out the trash to the front of the house</p>
+    </li>
+  </div>
 
+</section>
 
 
 
