--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
           <form class="row g-3" id="form">
             <div class="col-md-4">
               <label for="taskName" class="form-label">Task Name</label>
-              <input type = "text" class="form-control" id="taskName" required>
+              <input type = "text" class="form-control" id="taskName" required/>
             </div>
             <div class="col-md-4">
               <label for="taskDescription" class="form-label">Task Description</label>
-              <input type = "text" class="form-control" id="taskDescription" required>
+              <input type = "text" class="form-control" id="taskDescription" required/>
             </div>
             <div class="col-md-4">
               <label for="assignedTo" class="form-label">Assigned To</label>
-              <input type = "text" class="form-control" id="assignedTo" required>
+              <input type = "text" class="form-control" id="assignedTo" required/>
             </div>
             <div class="col-md-8">
               <label for="dueDate" class="form-label">Due Date</label>
-              <input type = "date" class="form-control" id="dueDate" required>
+              <input type = "date" class="form-control" id="dueDate" required/>
             </div>
             <div class="col-md-4">
               <label for="status" class="form-label"><strong>Status</strong></label>
-              <select class="form-select" id="status" required>
+              <select class="form-select" id="status" required/>
                 <option selected disabled value="">Select</option>
                 <option value="todo">To-Do</option>
                 <option value="inprogress">In Progress</option>
@@ -93,6 +93,9 @@
             </div>
             <div class="col-md-12">
               <button id="button" type="submit" class="btn btn-primary">Add</button>
+              <div id="alert" class="alert alert-danger" role="alert">
+                    Please complete all fields!
+                  </div>
             </div>
           </form>
             </div>
@@ -104,7 +107,7 @@
     <li class="list-group-item">
         <div class="d-flex w-100 mt-2 justify-content-between align-items-center">
             <h5>Take out trash</h5>
-            <span class="badge badge-danger">TODO</span>
+            <span class="badge badge-danger">TO-DO</span>
         </div>
         <div class="d-flex w-100 mb-3 justify-content-between">
             <small>Assigned To: Nick</small>
