--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             </div>
             <div class="col-md-12">
               <button id="button" type="submit" class="btn btn-primary">Add</button>
-              <div id="alert" class="alert alert-danger" role="alert">
+              <!-- <div id="alert" class="alert alert-danger" role="alert">
                     Please complete all fields!
-                  </div>
+                  </div> -->
             </div>
           </form>
             </div>
