--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <li class="list-group-item">
         <div class="d-flex w-100 mt-2 justify-content-between align-items-center">
             <h5>Take out trash</h5>
-            <span class="badge badge-danger">TO-DO</span>
+            <span class="badge badge-danger">In progress</span>
         </div>
         <div class="d-flex w-100 mb-3 justify-content-between">
             <small>Assigned To: Nick</small>
