--- a/index.html
+++ b/index.html
@@ -66,33 +66,33 @@
           <h3>Add New Task</h3>
           <form class="row g-3" id="form">
             <div class="col-md-4">
-              <label for="taskName" class="form-label">Task Name</label>
-              <input type = "text" class="form-control" id="taskName" required/>
+              <label for="taskName" class="form-label"><strong>Task Name</strong></label>
+              <input type = "text" class="form-control" id="taskName" required>
             </div>
             <div class="col-md-4">
-              <label for="taskDescription" class="form-label">Task Description</label>
-              <input type = "text" class="form-control" id="taskDescription" required/>
+              <label for="taskDescription" class="form-label"><strong>Task description</strong></label>
+              <input type = "text" class="form-control" id="taskDescription" required>
             </div>
             <div class="col-md-4">
-              <label for="assignedTo" class="form-label">Assigned To</label>
-              <input type = "text" class="form-control" id="assignedTo" required/>
+              <label for="assignedTo" class="form-label"><strong>Assigned To</strong></label>
+              <input type = "text" class="form-control" id="assignedTo" required>
             </div>
             <div class="col-md-8">
-              <label for="dueDate" class="form-label">Due Date</label>
-              <input type = "date" class="form-control" id="dueDate" required/>
+              <label for="dueDate" class="form-label"><strong>Due Date</strong></label>
+              <input type = "date" class="form-control" id="dueDate" required>
             </div>
             <div class="col-md-4">
               <label for="status" class="form-label"><strong>Status</strong></label>
-              <select class="form-select" id="status" required/>
+              <select class="form-select" id="status" required>
                 <option selected disabled value="">Select</option>
-                <option value="todo">To-Do</option>
-                <option value="inprogress">In Progress</option>
-                <option value="inreview">In Review</option>
-                <option value="done">Done</option>
+                <option value="To-Do">To-Do</option>
+                <option value="In Progress">In Progress</option>
+                <option value="In Review">In Review</option>
+                <option value="DONE">Done</option>
               </select>
             </div>
             <div class="col-md-12">
-              <button id="button" type="submit" class="btn btn-primary">Add</button>
+              <button id="button" type="submit" class="btn btn-primary">+</button>
               <!-- <div id="alert" class="alert alert-danger" role="alert">
                     Please complete all fields!
                   </div> -->
@@ -115,6 +115,7 @@
         </div>
         <p>Take out the trash to the front of the house</p>
     </li>
+
   </div>
 
 </section>
@@ -125,7 +126,7 @@
   <!-- JavaScript -->
   <script src="js/taskManager.js"></script>
   <script src="js/index.js"></script>
-  <!-- Bootstrap Script -->
+  <!-- Bootstrap Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 
