task 9, still need updating

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <!-- Link to CSS file-->
   <link rel="css stylesheet" href='./css/styles.css'>
 
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap" rel="stylesheet">
+
   <!-- FontAwesome Script -->
   <script src="https://kit.fontawesome.com/ba09da393d.js" crossorigin="anonymous"></script>
 
@@ -25,6 +30,7 @@
 
     <div class="container-fluid">
       <h1>Task Manager</h1>
+
 
       <!-- Page 1 Tasks Section -->
       <!--
@@ -63,7 +69,7 @@
 
       <section id="tasks">
         <div class="container mt-5">
-          <h3>Add New Task</h3>
+
           <form class="row g-3" id="form">
             <div class="col-md-4">
               <label for="taskName" class="form-label"><strong>Task Name</strong></label>
@@ -91,12 +97,12 @@
                 <option value="DONE">Done</option>
               </select>
             </div>
-            <div class="col-md-12">
+
               <button id="button" type="submit" class="btn btn-primary">+</button>
               <!-- <div id="alert" class="alert alert-danger" role="alert">
                     Please complete all fields!
                   </div> -->
-            </div>
+            
           </form>
             </div>
         </section>
