Task 9 finished, its functional!

--- a/index.html
+++ b/index.html
@@ -31,42 +31,7 @@
     <div class="container-fluid">
       <h1>Task Manager</h1>
 
-
-      <!-- Page 1 Tasks Section -->
-      <!--
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="card border-dark mb-3" style="width: 18rem">
-              <div class="card-header"><i class="fa-solid fa-calendar"></i>Today's Tasks</div>
-              <div class="card-body">
-                <a href="#" class="card-link">Pick kids up from day care</a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card border-dark mb-3" style="width: 18rem">
-              <div class="card-header"><i class="fa-solid fa-clock"></i>Upcoming Tasks</div>
-              <div class="card-body">
-                <a href="#" class="card-link">Clean garage</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="card border-dark mb-3" style="width: 38rem">
-              <div class="card-header"><i class="fa-solid fa-inbox"></i>All Tasks</div>
-              <div class="card-body">
-                <a href="#" class="card-link">Swiffer floors</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- Task Selectors -->
-
+<!-- new task form -->
       <section id="tasks">
         <div class="container mt-5">
 
@@ -94,20 +59,17 @@
                 <option value="To-Do">To-Do</option>
                 <option value="In Progress">In Progress</option>
                 <option value="In Review">In Review</option>
-                <option value="DONE">Done</option>
               </select>
             </div>
 
               <button id="button" type="submit" class="btn btn-primary">+</button>
-              <!-- <div id="alert" class="alert alert-danger" role="alert">
-                    Please complete all fields!
-                  </div> -->
-            
+
           </form>
             </div>
         </section>
 
 <!-- Task Card -->
+
 <section id="taskCard">
   <div id="newTaskList" class="container-mt-5">
     <li class="list-group-item">
@@ -128,13 +90,12 @@
 
 
 
-
-  <!-- JavaScript -->
-  <script src="js/taskManager.js"></script>
-  <script src="js/index.js"></script>
   <!-- Bootstrap Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+  <!-- JavaScript -->
+  <script src="js/taskManager.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 
