--- a/index.html
+++ b/index.html
@@ -20,16 +20,64 @@
   <!-- FontAwesome Script -->
   <script src="https://kit.fontawesome.com/ba09da393d.js" crossorigin="anonymous"></script>
 
+<!-- Navbar -->
 
+<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#">Task Manager</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<!-- Tasks Section -->
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="card border-dark mb-3" style="width: 18rem">
+            <div class="card-body"><i class="fa-solid fa-calendar">
+            </i>Today's Tasks
+            <p type="number" id="today-tasks"></p>
+          </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card border-dark mb-3" style="width: 18rem">
+            <div class="card-body"><i class="fa-solid fa-clock">
+            </i>All Tasks
+            <p type="number"  id="all-tasks" class="badge-warning">0</p>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<section id="title">
   <title>Group 8</title>
 </head>
 
 <body>
 
-  <section id="title">
+
 
     <div class="container-fluid">
-      <h1>Task Manager</h1>
+
 
 <!-- new task form -->
       <section id="tasks">
