Updated today task  counter for days in month < 10

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
 </div>
   <div class="container" id="content">
-    <div class="row sticky-top">
+    <div id= "task-count" class="row sticky-top">
       <div class="col-6">
         <div class="card" >
           <div class="card-body"><i class="fa-solid fa-calendar circle-icon-today">
             </i>
-            <div type="number" id="today-tasks" class="card-numbers">0</div>
+            <div type="number" id="today-tasks" class="card-numbers"></div>
             <p class ="card-titles">Today's Tasks</p>
           </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="card">
           <div class="card-body"><i class="fa-solid fa-clock circle-icon">
             </i>
-            <div type="number" id="all-tasks" class="card-numbers">0</div>
+            <div type="number" id="all-tasks" class="card-numbers"></div>
             <p class ="card-titles">All Tasks</p>
 
           </div>
